# cpor

./: .env.template  .gitignore  Async Database Instructions for GitHub Copilot Chat.md  CI_SETUP.md  README.md  aipy-aiocore-instructions.md  aipy-aiofastapi-instructions.md  aipy-aiopg-instructions.md  aipy-aiosqlite-instructions.md  aipy-instructions.md  check_devices.py  ci_status.sh  config.json.template  copilot_async_python_instructions.md  example_controller.py  get_nest_token.py  link_devices.py  mvp1.py  mvp2.py  mvp3.py  pyproject.toml  pytest.ini  quick_coverage.sh  refresh_token.py  run_tests.sh  sub-instructions.md  test_nest_api.py  test_pubsub.py  test_pubsub_http.py  validate_task1.py  watch_tests.sh
.github/instructions/: aipy.instructions.md  aipyasync-aiofiles.instructions.md  aipyasync-aiosqlite.instructions.md  aipyasync-asyncpg.instructions.md  aipyasync-bizproxy.instructions.md  aipyasync-bizproxyhttpxfastapi.instructions.md  aipyasync-bizproxyplugin.instructions.md  aipyasync-core.instructions.md  aipyasync-fastapi.instructions.md  aipyasync-httpx.instructions.md  filelist.md  visions.instructions.md
.github/workflows/: ci.yml
docs/: coverage_improvement_plan.md
docs/instructions/: README.md  crypto_typing_and_validation.md  general_housekeeping.md  validate_scripts_and_test_structure.md
docs/lessons_learned/: README.md  task1_dataclass_issues.md  task2_crypto_and_test_typing.md
docs/qa/: README.md  crypto_error_analysis_and_fix_plan.md  crypto_error_fix_plan.md  final_crypto_completion_plan.md  task1_completion_assessment.md  task2_completion_assessment.md
docs/specs/: protocol_spec.md
src/: __init__.py
src/auth/: __init__.py  token_manager.py
src/config/: __init__.py  settings.py
src/cpor/: __init__.py  config.py  crypto.py  messages.py  py.typed
src/database/: __init__.py  models.py  operations.py
src/messaging/: __init__.py  mqtt.py  pubsub.py
src/nest/: __init__.py  api.py
src/utils/: __init__.py  logging.py  retry.py  zigbee.py
tests/: conftest.py
tests/unit/: test_ack_message.py  test_base_message.py  test_base_message_scaffold.py  test_batch_message.py  test_close_message.py  test_config.py  test_connect_request.py  test_connect_response.py  test_crypto.py  test_error_message.py  test_generic_message.py  test_heartbeat_message.py  test_messages.py  test_parse_message.py  test_parse_message_scaffold.py  test_resume_request.py  test_resume_response.py
tests/validate/: README.md  __init__.py  move_instructions.md  validate_spec_aligned.py  validate_task2_crypto.py  validate_task3_config.py
